--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ autopep8==1.7.0
 chardet==5.0.0
 click==8.1.3
 colorama==0.4.5
+cssbeautifier==1.14.7
 dill==0.3.5.1
 dj-database-url==1.0.0
 Django==3.2.15
@@ -12,10 +13,12 @@ django-bootstrap5==22.1
 django-heroku==0.3.1
 django-widget-tweaks==1.4.12
 djlint==1.12.0
+EditorConfig==0.12.3
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 importlib-metadata==4.12.0
 isort==5.10.1
+jsbeautifier==1.14.7
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
 pathspec==0.9.0
