--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ platformdirs==2.5.2
 psycopg2==2.9.3
 pycodestyle==2.9.1
 pylint==2.14.5
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
 pytz==2022.2.1
 PyYAML==6.0
 regex==2022.8.17
