--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ jsbeautifier==1.14.7
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
 pathspec==0.9.0
+Pillow==9.3.0
 pip-autoremove==0.10.0
 platformdirs==2.5.2
 psycopg2==2.9.3
@@ -31,6 +32,7 @@ pylint-plugin-utils==0.7
 pytz==2022.2.1
 PyYAML==6.0
 regex==2022.8.17
+reportlab==3.6.12
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
