--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,10 @@ dj-database-url==1.0.0
 Django==3.2.15
 django-bootstrap-breadcrumbs==0.9.2
 django-bootstrap5==22.1
-django-heroku==0.3.1
+django-psdb-engine==1.0.6
 djlint==1.12.0
 EditorConfig==0.12.3
+gunicorn==20.1.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 importlib-metadata==4.12.0
@@ -20,15 +21,20 @@ isort==5.10.1
 jsbeautifier==1.14.7
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
+mysql-connector-python==8.0.31
+mysqlclient==2.1.1
 pathspec==0.9.0
 Pillow==9.3.0
 pip-autoremove==0.10.0
 platformdirs==2.5.2
-psycopg2==2.9.3
+protobuf==3.20.1
+psycopg2-binary==2.9.5
 pycodestyle==2.9.1
 pylint==2.14.5
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
+PyMySQL==1.0.2
+python-dotenv==0.21.0
 pytz==2022.2.1
 PyYAML==6.0
 regex==2022.8.17
