--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ importlib-metadata==4.12.0
 isort==5.10.1
 jsbeautifier==1.14.7
 lazy-object-proxy==1.7.1
+Markdown==3.4.1
+markdown-link-attr-modifier==0.2.0
 mccabe==0.7.0
 mysql-connector-python==8.0.31
 mysqlclient==2.1.1
@@ -30,6 +32,7 @@ platformdirs==2.5.2
 protobuf==3.20.1
 psycopg2-binary==2.9.5
 pycodestyle==2.9.1
+Pygments==2.13.0
 pylint==2.14.5
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
