--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ EditorConfig==0.12.3
 gunicorn==20.1.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
+icalendar==5.0.3
 importlib-metadata==5.1.0
 isort==5.10.1
 jsbeautifier==1.14.7
@@ -37,6 +38,7 @@ pylint==2.15.7
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
 PyMySQL==1.0.2
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.2.1
 PyYAML==6.0
