--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 astroid==2.12.13
 autopep8==2.0.0
+black==22.12.0
 chardet==5.1.0
 click==8.1.3
 colorama==0.4.5
@@ -24,6 +25,7 @@ lazy-object-proxy==1.7.1
 Markdown==3.4.1
 markdown-link-attr-modifier==0.2.0
 mccabe==0.7.0
+mypy-extensions==0.4.3
 mysql-connector-python==8.0.31
 mysqlclient==2.1.1
 pathspec==0.10.2
